--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 Django==4.2.2
+djangorestframework==3.14.0
+gunicorn==20.1.0
 idna==3.4
 kombu==5.3.1
 prompt-toolkit==3.0.38
